Checkpoint.  Model train, test, load, and save working.

--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,32 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_state_dict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-f49e5af61839>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Build network\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#model = create_model('densenet121')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'checkpoint.pth'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Define optimizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-11-18929520051c>\u001b[0m in \u001b[0;36mload_model\u001b[1;34m(filepath)\u001b[0m\n\u001b[0;32m     47\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'state_dict'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclass_to_idx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheckpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'class_to_idx'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m     \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_state_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcheckpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'optimizer'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m     \u001b[0mepochs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheckpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'epochs'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_state_dict' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build network\n",
-    "#model = create_model('densenet121')\n",
-    "model = load_model('checkpoint.pth')\n",
-    "\n",
-    "# Define optimizer\n",
-    "#optimizer = optim.Adam(model.classifier.parameters(), lr=0.003)\n",
-    "\n",
-    "# Define criterion\n",
-    "criterion = nn.NLLLoss()"
+    "#model, optimizer, criterion = create_model('densenet121', train_data.class_to_idx)\n",
+    "model, optimizer, criterion = load_model('checkpoint.pth')"
    ]
   },
   {
@@ -250,7 +231,8 @@
     "        model.train()\n",
     "\n",
     "        if (accuracy / len(validation_loader)) > .7:\n",
-    "           break;"
+    "            save_model('checkpoint.pth', model, train_data.class_to_idx, optimizer.state_dict(), epochs)\n",
+    "            break;"
    ]
   },
   {
@@ -264,9 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Loss: 1.050 | Accuracy: 0.706\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the newly trained network\n",
     "\n",
@@ -294,10 +284,14 @@
     "        top_p, top_class = class_p.topk(1, dim=1)\n",
     "        equals = top_class == labels.view(*top_class.shape)\n",
     "        accuracy += torch.mean(equals.type(torch.FloatTensor)).item()        \n",
-    "    \n",
-    "print(f\"Epoch {e+1:0>2d}/{epochs:0>2d} |\",\n",
-    "      f\"Testing Loss: {test_loss/len(test_loader):.3f} |\",\n",
-    "      f\"Accuracy: {accuracy/len(test_loader):.3f}\")"
+    "\n",
+    "test_loss /= len(test_loader)\n",
+    "accuracy /= len(test_loader)\n",
+    "\n",
+    "print(f\"Testing Loss: {test_loss:.3f} |\",\n",
+    "      f\"Accuracy: {accuracy:.3f}\")\n",
+    "\n",
+    "model.train();"
    ]
   },
   {
@@ -315,21 +309,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Save the checkpoint \n",
     "#model.class_to_idx = train_data['train'].class_to_idx\n",
+    "def save_model(file_path, model, class_to_idx, optimizer_state_dict, epochs):\n",
+    "    checkpoint = {'arch': 'densenet121',\n",
+    "                  'classifier': model.classifier,\n",
+    "                  'state_dict': model.state_dict(),\n",
+    "                  'class_to_idx': train_data.class_to_idx,\n",
+    "                  'optimizer': optimizer.state_dict(),\n",
+    "                  'epochs': epochs}\n",
     "\n",
-    "checkpoint = {'arch': 'densenet121',\n",
-    "              'classifier': model.classifier,\n",
-    "              'state_dict': model.state_dict(),\n",
-    "              'class_to_idx': train_data.class_to_idx,\n",
-    "              'optimizer': optimizer.state_dict(),\n",
-    "              'epochs': epochs}\n",
-    "\n",
-    "torch.save(checkpoint, 'checkpoint.pth')"
+    "    torch.save(checkpoint, file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-92cb773b9035>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msave_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'checkpoint.pth'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclass_to_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "save_model('checkpoint.pth', model, train_data.class_to_idx, optimizer.state_dict(), epochs)"
    ]
   },
   {
@@ -343,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,11 +392,17 @@
     "    # Freeze model features\n",
     "    freeze_model_features(model)\n",
     "    \n",
+    "    optimizer = optim.Adam(model.classifier.parameters(), lr=0.003)\n",
+    "    \n",
     "    model.class_to_idx = class_to_idx\n",
     "    \n",
-    "    return model\n",
+    "    # Define criterion\n",
+    "    criterion = nn.NLLLoss()\n",
+    "    \n",
+    "    return model, optimizer, criterion\n",
     "            \n",
-    "def load_model(filepath):\n",
+    "def load_model(filepath, lr=.003):\n",
+    "    \n",
     "    # Load model checkpoint file\n",
     "    checkpoint = torch.load(filepath)\n",
     "    \n",
@@ -395,13 +416,19 @@
     "\n",
     "    model.load_state_dict(checkpoint['state_dict'])\n",
     "    model.class_to_idx = checkpoint['class_to_idx']\n",
-    "    optimizer = load_state_dict(checkpoint['optimizer'])\n",
+    "    \n",
+    "    optimizer = optim.Adam(model.classifier.parameters(), lr)\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer'])\n",
+    "    \n",
     "    epochs = checkpoint['epochs']\n",
     "    \n",
     "    # Freeze model parameters\n",
     "    freeze_model_features(model)\n",
     "    \n",
-    "    return model"
+    "    # Define criterion\n",
+    "    criterion = nn.NLLLoss()\n",
+    "    \n",
+    "    return model, optimizer, criterion"
    ]
   },
   {
