--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,20 +156,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Build network\n",
-    "#model, optimizer, criterion = create_model('densenet121', train_data.class_to_idx)\n",
-    "model, optimizer, criterion = load_model('checkpoint.pth')"
+    "model, optimizer, criterion = create_model('vgg16', train_data.class_to_idx)\n",
+    "#model, optimizer, criterion = load_model('checkpoint.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 01/10 | Training Loss: 4.737 | Validation Loss: 2.703 | Accuracy: 0.332 | Cycle Time: 028 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "# Train Network\n",
     "epochs = 10\n",
@@ -181,7 +189,7 @@
     "model.to(device)\n",
     "\n",
     "for e in range(epochs):\n",
-    "\n",
+    "    start_time = time.time()\n",
     "    train_loss = 0\n",
     "            \n",
     "    for images, labels in train_loader:\n",
@@ -225,7 +233,8 @@
     "        print(f\"Epoch {e+1:0>2d}/{epochs:0>2d} |\",\n",
     "              f\"Training Loss: {train_loss/len(train_loader):.3f} |\",\n",
     "              f\"Validation Loss: {validation_loss/len(validation_loader):.3f} |\",\n",
-    "              f\"Accuracy: {accuracy / len(validation_loader):.3f}\")\n",
+    "              f\"Accuracy: {accuracy / len(validation_loader):.3f} |\",\n",
+    "              f\"Cycle Time: {int(round((time.time() - start_time) / 60, 0)):0>3d} minutes\")\n",
     "\n",
     "        # Put model back into training mode\n",
     "        model.train()\n",
@@ -327,27 +336,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-92cb773b9035>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msave_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'checkpoint.pth'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclass_to_idx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "save_model('checkpoint.pth', model, train_data.class_to_idx, optimizer.state_dict(), epochs)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -358,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,9 +361,10 @@
     "        model = models.vgg16(pretrained=True)\n",
     "\n",
     "        # In features: 25088, Output 102 classes\n",
-    "        model.classifier = nn.Sequential(OrderedDict([('fc1', nn.Linear(25088, 4096)),\n",
+    "        model.classifier = nn.Sequential(OrderedDict([('dropout1', nn.Dropout(.2)),\n",
+    "                                                      ('fc1', nn.Linear(25088, 4096)),\n",
     "                                                      ('relu', nn.ReLU()),\n",
-    "                                                      ('dropout', nn.Dropout(.20)),\n",
+    "                                                      ('dropout2', nn.Dropout(.2)),\n",
     "                                                      ('fc2', nn.Linear(4096, 102)),\n",
     "                                                      ('out', nn.LogSoftmax(dim=1))]))\n",
     "        \n",
@@ -383,9 +372,10 @@
     "        model = models.densenet121(pretrained=True)\n",
     "        \n",
     "        # In features: 1024, Output 102 classes\n",
-    "        model.classifier = nn.Sequential(OrderedDict([('fc1', nn.Linear(1024, 512)),\n",
+    "        model.classifier = nn.Sequential(OrderedDict([('dropout1', nn.Dropout(.2)),\n",
+    "                                                      ('fc1', nn.Linear(1024, 512)),\n",
     "                                                      ('relu', nn.ReLU()),\n",
-    "                                                      ('dropout', nn.Dropout(.2)),\n",
+    "                                                      ('dropout2', nn.Dropout(.2)),\n",
     "                                                      ('fc2', nn.Linear(512, 102)),\n",
     "                                                      ('output', nn.LogSoftmax(dim=1))]))\n",
     "    \n",
