--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,28 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Build network\n",
-    "model, optimizer, criterion = create_model('vgg16', train_data.class_to_idx)\n",
-    "#model, optimizer, criterion = load_model('checkpoint.pth')"
+    "#model, optimizer, criterion = create_model('vgg16', .003, train_data.class_to_idx)\n",
+    "model, optimizer, criterion = load_model('checkpoint.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 01/10 | Training Loss: 4.737 | Validation Loss: 2.703 | Accuracy: 0.332 | Cycle Time: 028 minutes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train Network\n",
     "epochs = 10\n",
@@ -234,7 +226,7 @@
     "              f\"Training Loss: {train_loss/len(train_loader):.3f} |\",\n",
     "              f\"Validation Loss: {validation_loss/len(validation_loader):.3f} |\",\n",
     "              f\"Accuracy: {accuracy / len(validation_loader):.3f} |\",\n",
-    "              f\"Cycle Time: {int(round((time.time() - start_time) / 60, 0)):0>3d} minutes\")\n",
+    "              f\"Cycle Time: {int(round((time.time() - start_time) / 60)):0>3d} minutes\")\n",
     "\n",
     "        # Put model back into training mode\n",
     "        model.train()\n",
@@ -262,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing Loss: 1.050 | Accuracy: 0.706\n"
+      "Testing Loss: 1.189 | Accuracy: 0.671\n"
      ]
     }
    ],
@@ -318,13 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Save the checkpoint \n",
     "#model.class_to_idx = train_data['train'].class_to_idx\n",
-    "def save_model(file_path, model, class_to_idx, optimizer_state_dict, epochs):\n",
+    "def save_model(file_path, model, class_to_idx, optimizer, epochs):\n",
     "    checkpoint = {'arch': 'densenet121',\n",
     "                  'classifier': model.classifier,\n",
     "                  'state_dict': model.state_dict(),\n",
@@ -333,6 +325,15 @@
     "                  'epochs': epochs}\n",
     "\n",
     "    torch.save(checkpoint, file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_model('checkpoint.pth', model, train_data.class_to_idx, optimizer, 10)"
    ]
   },
   {
@@ -356,7 +357,7 @@
     "    for feature in model.features:\n",
     "        feature.requires_grad = False\n",
     "\n",
-    "def create_model(arch='densenet121', class_to_idx=None):\n",
+    "def create_model(arch='densenet121', lr=.003, class_to_idx=None):\n",
     "    if arch == 'vgg16':\n",
     "        model = models.vgg16(pretrained=True)\n",
     "\n",
@@ -382,7 +383,7 @@
     "    # Freeze model features\n",
     "    freeze_model_features(model)\n",
     "    \n",
-    "    optimizer = optim.Adam(model.classifier.parameters(), lr=0.003)\n",
+    "    optimizer = optim.Adam(model.classifier.parameters(), lr)\n",
     "    \n",
     "    model.class_to_idx = class_to_idx\n",
     "    \n",
@@ -396,27 +397,14 @@
     "    # Load model checkpoint file\n",
     "    checkpoint = torch.load(filepath)\n",
     "    \n",
-    "    if checkpoint['arch'] == 'vgg16':\n",
-    "        model = models.vgg16(pretrained=True)\n",
-    "        model.classifier = checkpoint['classifier']\n",
-    "\n",
-    "    elif checkpoint['arch'] == 'densenet121':\n",
-    "        model = models.densenet121(pretrained=True)\n",
-    "        model.classifier = checkpoint['classifier']\n",
-    "\n",
+    "    model, optimizer, criterion = create_model(checkpoint['arch'], lr)\n",
+    "    \n",
     "    model.load_state_dict(checkpoint['state_dict'])\n",
     "    model.class_to_idx = checkpoint['class_to_idx']\n",
     "    \n",
-    "    optimizer = optim.Adam(model.classifier.parameters(), lr)\n",
     "    optimizer.load_state_dict(checkpoint['optimizer'])\n",
     "    \n",
     "    epochs = checkpoint['epochs']\n",
-    "    \n",
-    "    # Freeze model parameters\n",
-    "    freeze_model_features(model)\n",
-    "    \n",
-    "    # Define criterion\n",
-    "    criterion = nn.NLLLoss()\n",
     "    \n",
     "    return model, optimizer, criterion"
    ]
