Added create_network to programatically build network.

--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Build network\n",
-    "#model, optimizer, criterion = create_model('vgg16', .003, train_data.class_to_idx)\n",
+    "#model, optimizer, criterion = create_model('vgg16', None, .003, train_data.class_to_idx)\n",
     "model, optimizer, criterion = load_model('checkpoint.pth')"
    ]
   },
@@ -247,17 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Loss: 1.189 | Accuracy: 0.671\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test the newly trained network\n",
     "\n",
@@ -310,15 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Save the checkpoint \n",
     "#model.class_to_idx = train_data['train'].class_to_idx\n",
-    "def save_model(file_path, model, class_to_idx, optimizer, epochs):\n",
+    "def save_model(file_path, model, hidden_layers, class_to_idx, optimizer, epochs):\n",
     "    checkpoint = {'arch': 'densenet121',\n",
     "                  'classifier': model.classifier,\n",
+    "                  'hidden_layers': hidden_layers,\n",
     "                  'state_dict': model.state_dict(),\n",
     "                  'class_to_idx': train_data.class_to_idx,\n",
     "                  'optimizer': optimizer.state_dict(),\n",
@@ -329,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,44 +340,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
     "def freeze_model_features(model):\n",
+    "    \"\"\"\n",
+    "    Freeze the features of input model\n",
+    "    Inputs: Model\n",
+    "    Outputs: None\n",
+    "    \"\"\"\n",
     "    # Freeze model features\n",
     "    for feature in model.features:\n",
     "        feature.requires_grad = False\n",
     "\n",
-    "def create_model(arch='densenet121', lr=.003, class_to_idx=None):\n",
+    "def create_network(hidden_layers):\n",
+    "    \"\"\"\n",
+    "    Creates the classifier network based on the parameters of hidden_layers\n",
+    "    Inputs: Array of numbers, each representing the size of each hidden layer.\n",
+    "            Expects the number of input features to be at the first element of the list\n",
+    "            and number of output categories to be the last element of the list\n",
+    "    Outputs:A list of network parameters, including size, dropout, and activation functions\n",
+    "    \"\"\"\n",
+    "    network = []\n",
+    "    for i in range(len(hidden_layers) - 1):\n",
+    "        # Last iteration/output layer\n",
+    "        if i == (len(hidden_layers) - 2):\n",
+    "            network.extend([('fc_{}'.format(i), nn.Linear(hidden_layers[i],hidden_layers[i+1])),\n",
+    "                            ('out', nn.LogSoftmax(dim=1))])\n",
+    "\n",
+    "        else:\n",
+    "            network.extend([('dropout_{}'.format(i), nn.Dropout(.2)), \n",
+    "                            ('fc_{}'.format(i), nn.Linear(hidden_layers[i],hidden_layers[i+1])),\n",
+    "                            ('relu_{}'.format(i), nn.ReLU())])\n",
+    "    return network\n",
+    "        \n",
+    "def create_model(arch='densenet121', hidden_layers=None, lr=.003, class_to_idx=None):\n",
+    "    \n",
+    "    # Load pre-trained model and replace classifier with custom classifier\n",
     "    if arch == 'vgg16':\n",
     "        model = models.vgg16(pretrained=True)\n",
-    "\n",
+    "        \n",
     "        # In features: 25088, Output 102 classes\n",
-    "        model.classifier = nn.Sequential(OrderedDict([('dropout1', nn.Dropout(.2)),\n",
-    "                                                      ('fc1', nn.Linear(25088, 4096)),\n",
-    "                                                      ('relu', nn.ReLU()),\n",
-    "                                                      ('dropout2', nn.Dropout(.2)),\n",
-    "                                                      ('fc2', nn.Linear(4096, 102)),\n",
-    "                                                      ('out', nn.LogSoftmax(dim=1))]))\n",
+    "        if hidden_layers == None:\n",
+    "            hidden_layers = [25088, 4096, 102] # Default configuration\n",
+    "        else:\n",
+    "            hidden_layers.insert(0, 25088)\n",
+    "            hidden_layers.append(102)\n",
+    "            \n",
+    "        model.classifier = nn.Sequential(OrderedDict(create_network(hidden_layers)))\n",
     "        \n",
     "    elif arch == 'densenet121':\n",
     "        model = models.densenet121(pretrained=True)\n",
     "        \n",
     "        # In features: 1024, Output 102 classes\n",
-    "        model.classifier = nn.Sequential(OrderedDict([('dropout1', nn.Dropout(.2)),\n",
-    "                                                      ('fc1', nn.Linear(1024, 512)),\n",
-    "                                                      ('relu', nn.ReLU()),\n",
-    "                                                      ('dropout2', nn.Dropout(.2)),\n",
-    "                                                      ('fc2', nn.Linear(512, 102)),\n",
-    "                                                      ('output', nn.LogSoftmax(dim=1))]))\n",
+    "        if hidden_layers == None:\n",
+    "            hidden_layers = [1024, 512, 102]  # Default configuration\n",
+    "        else:\n",
+    "            hidden_layers.insert(0, 1024)\n",
+    "            hidden_layers.append(102)\n",
+    "            \n",
+    "        model.classifier = nn.Sequential(OrderedDict(create_network(hidden_layers)))\n",
     "    \n",
     "    # Freeze model features\n",
     "    freeze_model_features(model)\n",
     "    \n",
+    "    # Create optimizer\n",
     "    optimizer = optim.Adam(model.classifier.parameters(), lr)\n",
     "    \n",
+    "    #Set model class to idx values\n",
     "    model.class_to_idx = class_to_idx\n",
     "    \n",
     "    # Define criterion\n",
@@ -397,11 +422,14 @@
     "    # Load model checkpoint file\n",
     "    checkpoint = torch.load(filepath)\n",
     "    \n",
-    "    model, optimizer, criterion = create_model(checkpoint['arch'], lr)\n",
+    "    # Load model\n",
+    "    model, optimizer, criterion = create_model(checkpoint['arch'], checkpoint['hidden_layers'], lr)\n",
     "    \n",
+    "    # Load model parameters from checkpoint file\n",
     "    model.load_state_dict(checkpoint['state_dict'])\n",
     "    model.class_to_idx = checkpoint['class_to_idx']\n",
     "    \n",
+    "    # Load optimizer parameters\n",
     "    optimizer.load_state_dict(checkpoint['optimizer'])\n",
     "    \n",
     "    epochs = checkpoint['epochs']\n",
@@ -620,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
