--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -626,7 +626,15 @@
     "    \n",
     "    model.train()\n",
     "    \n",
-    "    return class_p.topk(topk, dim=1)    "
+    "    probs, classes = class_p.topk(topk, dim=1) \n",
+    "    probs, classes = probs.to('cpu'), classes.to('cpu')\n",
+    "    probs, classes = probs.numpy().flatten(), classes.numpy().flatten()\n",
+    "    \n",
+    "    # Ref: https://knowledge.udacity.com/questions/259422\n",
+    "    idx_to_class = {k:i for i, k in model.class_to_idx.items()}\n",
+    "    classes = [idx_to_class[i] for i in classes]\n",
+    "\n",
+    "    return probs, classes"
    ]
   },
   {
@@ -649,13 +657,40 @@
    "outputs": [],
    "source": [
     "# TODO: Display an image along with the top 5 classes\n",
-    "image_path = './flowers/test/1/image_06760.jpg'\n",
+    "image_path = './flowers/test/28/image_05214.jpg'\n",
     "load_model('checkpoint.pth')\n",
-    "fig, plot = plt.subplots(2, 1)\n",
     "\n",
+    "# Resize plot and create subplots\n",
+    "plt.figure(figsize = [10, 10])\n",
+    "ax1, ax2 = plt.subplot(2, 1, 1), plt.subplot(2, 1, 2)\n",
+    "\n",
+    "# Process image\n",
     "image = process_image(Image.open(image_path))\n",
+    "\n",
+    "# Run image against model\n",
     "probs, classes = predict(image_path, model, 5)\n",
-    "imshow(image, plot[0]);"
+    "\n",
+    "# Get class names for most likely classes\n",
+    "class_names = [cat_to_name[i] for i in classes]\n",
+    "\n",
+    "# Show image in plot 1\n",
+    "imshow(image, ax1)\n",
+    "\n",
+    "# Ref: https://knowledge.udacity.com/questions/259422\n",
+    "y_pos = np.arange(len(probs))\n",
+    "\n",
+    "# Reverse array\n",
+    "y_pos[::-1].sort()\n",
+    "\n",
+    "# Configure barchart in plot 2\n",
+    "plt.barh(y=y_pos, width=probs)\n",
+    "plt.yticks(y_pos, class_names)\n",
+    "plt.title('flower image classifier')\n",
+    "plt.xlabel('probability')\n",
+    "plt.ylabel('top matches')\n",
+    "\n",
+    "# Set image title for highest probability match\n",
+    "ax1.title.set_text(class_names[0])"
    ]
   }
  ],
