--- a/projects/final_project/Image Classifier Project.ipynb
+++ b/projects/final_project/Image Classifier Project.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build network\n",
+    "# Build model.  Uncomment one line to create new model or to load from checkpoint\n",
     "#model, optimizer, criterion = create_model('densenet121', [512], .003, train_data.class_to_idx)\n",
     "model, optimizer, criterion = load_model('checkpoint.pth')"
    ]
@@ -228,6 +228,7 @@
     "        # Put model back into training mode\n",
     "        model.train()\n",
     "\n",
+    "        # If accuracy exceeds threshold, save model and exit training\n",
     "        if (accuracy / len(validation_loader)) > .8:\n",
     "            save_model('checkpoint.pth', model, [512], train_data.class_to_idx, optimizer, epochs)\n",
     "            break;"
@@ -438,7 +439,12 @@
     "    return model, optimizer, criterion\n",
     "            \n",
     "def load_model(filepath, lr=.003):\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    Loads a previously saved model.\n",
+    "    Inputs: Filepath to the model parameters file\n",
+    "            Learning rate: default = .003\n",
+    "    Outputs: The fully configured model, optimizer, and criterion\n",
+    "    \"\"\"\n",
     "    # Load model checkpoint file\n",
     "    checkpoint = torch.load(filepath)\n",
     "    \n",
@@ -496,13 +502,13 @@
    "source": [
     "def process_image(image):\n",
     "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
-    "        returns an Numpy array\n",
+    "        returns an Pytorch tensor\n",
     "    '''\n",
-    "    # TODO: Process a PIL image for use in a PyTorch model\n",
-    "    \n",
+    "    # Calculate aspect ratio of image\n",
     "    width, height = image.size\n",
     "    ar = height / float(width)\n",
     "    \n",
+    "    # Calculate dimensions of scaled image\n",
     "    if (height > width):\n",
     "        resize_dims = (256, int(round(256 * ar)))\n",
     "    else:\n",
@@ -511,14 +517,17 @@
     "    # Center of the \"crop box\"\n",
     "    cc = 112\n",
     "    \n",
+    "    # Calculate crop box (224 x 224)\n",
     "    crop_box = (int(resize_dims[0] / 2 - cc), int(resize_dims[1] / 2 - cc),\\\n",
     "                int(resize_dims[0] / 2 + cc), int(resize_dims[1] / 2 + cc))\n",
-    "    \n",
+    "\n",
+    "    # Resize to dimensions\n",
     "    image.resize(resize_dims)\n",
-    "        \n",
+    "    \n",
+    "    # Crop to size of crop box and normalize to 0-1\n",
     "    np_image = np.array(image.crop(crop_box)) / 255\n",
     "    \n",
-    "    # Convert color scale from U8 to float 0 - 1 and normalize\n",
+    "    # Normalize color channels\n",
     "    mean = np.array([.485, .456, .406])\n",
     "    sd = np.array([.229, .224, .225])\n",
     "    np_image = (np_image - mean) / sd\n",
@@ -526,6 +535,7 @@
     "    # Transpose\n",
     "    np_image = np_image.transpose((2, 0, 1))\n",
     "    \n",
+    "    # Convert to FloatTensor type before returning\n",
     "    return torch.from_numpy(np_image).type(torch.FloatTensor)"
    ]
   },
@@ -571,7 +581,6 @@
    "outputs": [],
    "source": [
     "# Test\n",
-    "\n",
     "image = Image.open('./flowers/test/1/image_06760.jpg')\n",
     "imshow(process_image(image));"
    ]
@@ -607,7 +616,7 @@
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
     "    \n",
-    "    # TODO: Implement the code to predict the class from an image file\n",
+    "    # Load image and process\n",
     "    image = process_image(Image.open(image_path))\n",
     "    \n",
     "    # Send model to target device and put into eval mode\n",
@@ -623,9 +632,11 @@
     "    with torch.no_grad(): \n",
     "        # Calculate class probabilities and determine \"matches\"\n",
     "        class_p = torch.exp(model.forward(image))\n",
-    "    \n",
+    "   \n",
+    "    # Return model to training mode\n",
     "    model.train()\n",
     "    \n",
+    "    # Compute top n classes, return them to the cpu, convert to numpy array, and finally flatten\n",
     "    probs, classes = class_p.topk(topk, dim=1) \n",
     "    probs, classes = probs.to('cpu'), classes.to('cpu')\n",
     "    probs, classes = probs.numpy().flatten(), classes.numpy().flatten()\n",
@@ -710,7 +721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
